--- a/build.xml
+++ b/build.xml
@@ -10,7 +10,7 @@
 	<property name="targetversion" value="1.6" />
 	<property name="manifest.main-class" value=""/>
 	<property name="manifest.class-path" value=""/>
-	<property name="project.version" value="1.5.4"/>
+	<property name="project.version" value="1.6.0"/>
 	<property name="project.name" value="${ant.project.name}"/>
 	<property name="project.vendor" value="Stefan Wertich" />
 	<property name="copyright.message" value="Copyright &#169; 2008-2010 ${project.vendor}. All Rights Reserved."/>
@@ -132,7 +132,7 @@
 			destfile="${package.dist.dir}/${jar.filename}"
 			compress="true">
 			<fileset dir="${classes.dir}" />
-			<fileset dir="." includes="resources/properties/**"/>
+			<fileset dir="." includes="resources/**"/>
 			
 			<manifest>
 				<attribute name ="Built-By" 
